--- a/docs/source/notebooks/Data Center.ipynb
+++ b/docs/source/notebooks/Data Center.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f76cc627",
+   "metadata": {},
+   "source": [
+    "## Clinical data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7137e64f",
