--- a/docs/source/notebooks/theme-based/ToolDev.ipynb
+++ b/docs/source/notebooks/theme-based/ToolDev.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdb085e0",
+   "id": "cb54dfe9",
    "metadata": {},
    "source": [
     "文献：\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b988f1c6",
+   "id": "af652b40",
    "metadata": {},
    "source": [
     "### deepGEX"
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3883698",
+   "id": "2a086b51",
    "metadata": {},
    "source": [
     "#### cell type specific GRN and in silico perturbation\n",
@@ -127,12 +127,12 @@
     "- Applications of deep learning in understanding gene regulation - reivew - 2023\n",
     "- scGRNom: a computational pipeline of integrative multi-omics analyses for predicting cell-type disease genes and regulatory networks - GM - 2021\n",
     "- Deep learning for inferring gene relationships from single-cell expression data - PNAS - 2019\n",
-    "- Applications of deep learning in understanding gene regulation - CRM - 2023"
+    "- **Applications of deep learning in understanding gene regulation - CRM - 2023**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "494484fc",
+   "id": "5f04d13c",
    "metadata": {},
    "source": [
     "key steps:\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15561d3d",
+   "id": "c43404cd",
    "metadata": {},
    "outputs": [],
    "source": []
