--- a/docs/source/notebooks/theme-based/ToolDev.ipynb
+++ b/docs/source/notebooks/theme-based/ToolDev.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb54dfe9",
+   "id": "a1187d7b",
    "metadata": {},
    "source": [
     "文献：\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af652b40",
+   "id": "c0f4c31f",
    "metadata": {},
    "source": [
     "### deepGEX"
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a086b51",
+   "id": "a18e099a",
    "metadata": {},
    "source": [
     "#### cell type specific GRN and in silico perturbation\n",
@@ -127,12 +127,15 @@
     "- Applications of deep learning in understanding gene regulation - reivew - 2023\n",
     "- scGRNom: a computational pipeline of integrative multi-omics analyses for predicting cell-type disease genes and regulatory networks - GM - 2021\n",
     "- Deep learning for inferring gene relationships from single-cell expression data - PNAS - 2019\n",
-    "- **Applications of deep learning in understanding gene regulation - CRM - 2023**"
+    "- **Applications of deep learning in understanding gene regulation - CRM - 2023**\n",
+    "- **Machine learning for perturbational single-cell omics - cell systems - 2021**\n",
+    "- **Deep transfer learning of cancer drug responses by integrating bulk and single-cell RNA-seq data - NC - 2022**\n",
+    "- https://github.com/theislab/sc-pert"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5f04d13c",
+   "id": "d3244478",
    "metadata": {},
    "source": [
     "key steps:\n",
@@ -143,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c43404cd",
+   "id": "55b54950",
    "metadata": {},
    "outputs": [],
    "source": []
