--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -162,7 +162,8 @@
    "source": [
     "#### Footprint\n",
     "- http://localhost:17435/notebooks/projects/ApcKO_multiomics/4.exclude_WT2.ipynb\n",
-    "- https://stuartlab.org/signac/articles/footprint.html"
+    "- https://stuartlab.org/signac/articles/footprint.html\n",
+    "- TOBIAS - NC - https://github.com/loosolab/TOBIAS"
    ]
   },
   {
