--- a/docs/source/notebooks/NGS.ipynb
+++ b/docs/source/notebooks/NGS.ipynb
@@ -60,6 +60,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d19edd09",
+   "metadata": {},
+   "source": [
+    "### Chem-seq\n",
+    "- https://doi.org/10.1073/pnas.1404303111\n",
+    "- https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4189815/\n",
+    "- Chem-map profiles drug binding to chromatin in cells - NBT - 2023"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c870e2a6",
    "metadata": {},
    "source": [
@@ -97,6 +108,16 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4de379a9",
+   "metadata": {},
+   "source": [
+    "### eCLIP-seq (RBP)\n",
+    "- UV crosslinking and immunoprecipitation (CLIP)\n",
+    "- Robust transcriptome-wide discovery of RNA-binding protein binding sites with enhanced CLIP (eCLIP)"
+   ]
   },
   {
    "cell_type": "markdown",
