--- a/docs/source/notebooks/ModelExp.ipynb
+++ b/docs/source/notebooks/ModelExp.ipynb
@@ -120,6 +120,31 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "4337e44b",
+   "metadata": {},
+   "source": [
+    "### dTAG\n",
+    "- The dTAG system for immediate and target-specific protein degradation - NCB - 2018"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd292413",
+   "metadata": {},
+   "source": [
+    "## Drug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b630bd98",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "885b976f",
