--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -190,7 +190,8 @@
    "id": "54a17dac",
    "metadata": {},
    "source": [
-    "### Cut&Run"
+    "### Cut&Run\n",
+    "- https://rockefelleruniversity.github.io/RU_ChIPseq/"
    ]
   },
   {
