--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -107,32 +107,17 @@
    "metadata": {},
    "source": [
     "#### Cistrome\n",
-    "- http://cistrome.org/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8c2ca44e",
-   "metadata": {},
-   "source": [
+    "- http://cistrome.org/\n",
+    "\n",
     "#### LISA\n",
-    "- http://lisa.cistrome.org/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9565db83",
-   "metadata": {},
-   "source": [
+    "- http://lisa.cistrome.org/\n",
+    "\n",
     "#### MEME\n",
-    "- https://meme-suite.org/meme/db/motifs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b644a5e9",
-   "metadata": {},
-   "source": [
+    "- https://meme-suite.org/meme/db/motifs\n",
+    "\n",
+    "#### HOMER\n",
+    "- \n",
+    "\n",
     "#### ChromHMM\n",
     "- unsupervised classification of chromatin state\n",
     "- [Chromatin-state discovery and genome annotation with ChromHMM](https://www.nature.com/articles/nprot.2017.124)"
