--- a/docs/source/notebooks/theme-based/ToolDev.ipynb
+++ b/docs/source/notebooks/theme-based/ToolDev.ipynb
@@ -178,6 +178,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f993c851",
+   "metadata": {},
+   "source": [
+    "### epi tools\n",
+    "- Readers, Writers, and Erasers Chromatin as the Whiteboard of Heart Disease - 2015\n",
+    "- Epigenetic tools (The Writers, The Readers and The Erasers) and their implications in cancer therapy - 2018\n",
+    "- Writing, erasing and reading histone lysine methylations - 2017"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bfd5212",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "c04c81cb",
    "metadata": {},
    "source": [
