--- a/docs/source/notebooks/Data Center.ipynb
+++ b/docs/source/notebooks/Data Center.ipynb
@@ -315,6 +315,11 @@
    "source": [
     "### motif\n",
     "- https://meme-suite.org/meme/db/motifs\n",
+    "- TFBS/motifBS: https://tfbsdb.systemsbiology.net/constructionValidation\n",
+    "- TFBSTools - R\n",
+    "- peak summit: https://summit.med.unideb.hu/summitdb/Documentation.php\n",
+    "- https://github.com/shenlab-sinai/ngsplot\n",
+    "- http://ginolhac.github.io/chip-seq/peak/\n",
     "\n",
     "### refTSS\n",
     "- refTSS: A Reference Data Set for Human and Mouse Transcription Start Sites\n",
@@ -329,10 +334,65 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f894dc23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4edc394c",
+   "metadata": {},
+   "source": [
+    "### motif DB\n",
+    "- Transcription factor motif quality assessment requires systematic comparative analysis\n",
+    "- TF footprint\n",
+    "- ATAC-seq footprinting unravels kinetics of transcription factor binding during zygotic genome activation\n",
+    "- Evaluating tools for transcription factor binding site prediction\n",
+    "- MAGIC: A tool for predicting transcription factors and cofactors driving gene sets using ENCODE data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5ce6f813",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb3b7828",
+   "metadata": {},
+   "source": [
+    "# Databases\n",
+    "\n",
+    "## Big theme-based DBs\n",
+    "\n",
+    "### DepMap\n",
+    "\n",
+    "\n",
+    "\n",
+    "### TCGA\n",
+    "\n",
+    "\n",
+    "\n",
+    "### CRC\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Circulating Cell-free Genome Atlas\n",
+    "- https://grail.com/clinical-studies/ccga-study/\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Small DBs\n",
+    "\n",
+    "### IMMUcan\n",
+    "- [Meta-Analysis of Human Cancer Single-Cell RNA-Seq Datasets Using the IMMUcan Database](https://doi.org/10.1158/0008-5472.CAN-22-0074)\n",
+    "- https://immucanscdb.vital-it.ch/\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
