--- a/docs/source/notebooks/theme-based/ToolDev.ipynb
+++ b/docs/source/notebooks/theme-based/ToolDev.ipynb
@@ -39,7 +39,7 @@
    "id": "2f03194c",
    "metadata": {},
    "source": [
-    "### inferGEX\n",
+    "### inferGEX不同层级\n",
     "- A tool about gene expression prediction based on epigenetic and DNA-binding protein\n",
     "- Working model: transcription is a key stop, it's determined by epigenetic features and DBP function\n",
     "- GEX是无法绕开的层级，也是表观层级的体现，GEX能解释大部分的phenotype的variation，其下游的也很重要，但目前我们暂时忽略\n",
@@ -104,6 +104,27 @@
     "文献：\n",
     "- Computational inference of cancer-specific vulnerabilities in clinical samples - 2020 - GB"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9349fc1",
+   "metadata": {},
+   "source": [
+    "### inferDEG时空预测\n",
+    "- 时间是一个非常重要的维度，不同的处理时间，收集的数据会有很大的不同，可以能收敛、也会离散；\n",
+    "- 能否用游戏GTA设计出所有的实体，然后fit高质量的数据，最后用deep learning来预测；\n",
+    "- 用数据来修正模型，这就是我的设计哲学；\n",
+    "- 从单细胞开始模拟，到组织、器官、个体、群体，彻底数据化；\n",
+    "- 如何盈利？Drug repurposing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64a5db5b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
