--- a/docs/source/notebooks/Data Center.ipynb
+++ b/docs/source/notebooks/Data Center.ipynb
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33f32fc6",
+   "id": "b2f7d994",
    "metadata": {},
    "source": [
     "### motif\n",
@@ -319,8 +319,28 @@
     "- TFBSTools - R\n",
     "- peak summit: https://summit.med.unideb.hu/summitdb/Documentation.php\n",
     "- https://github.com/shenlab-sinai/ngsplot\n",
-    "- http://ginolhac.github.io/chip-seq/peak/\n",
-    "\n",
+    "- http://ginolhac.github.io/chip-seq/peak/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a9ee672",
+   "metadata": {},
+   "source": [
+    "### motif DB\n",
+    "- Transcription factor motif quality assessment requires systematic comparative analysis\n",
+    "- TF footprint\n",
+    "- ATAC-seq footprinting unravels kinetics of transcription factor binding during zygotic genome activation\n",
+    "- Evaluating tools for transcription factor binding site prediction\n",
+    "- MAGIC: A tool for predicting transcription factors and cofactors driving gene sets using ENCODE data\n",
+    "- The identification of cis-regulatory elements: A review from a machine learning perspective"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33f32fc6",
+   "metadata": {},
+   "source": [
     "### refTSS\n",
     "- refTSS: A Reference Data Set for Human and Mouse Transcription Start Sites\n",
     "\n",
@@ -338,19 +358,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4edc394c",
-   "metadata": {},
-   "source": [
-    "### motif DB\n",
-    "- Transcription factor motif quality assessment requires systematic comparative analysis\n",
-    "- TF footprint\n",
-    "- ATAC-seq footprinting unravels kinetics of transcription factor binding during zygotic genome activation\n",
-    "- Evaluating tools for transcription factor binding site prediction\n",
-    "- MAGIC: A tool for predicting transcription factors and cofactors driving gene sets using ENCODE data"
-   ]
   },
   {
    "cell_type": "code",
