--- a/docs/source/notebooks/theme-based/Scenario planning.ipynb
+++ b/docs/source/notebooks/theme-based/Scenario planning.ipynb
@@ -11,10 +11,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d152fb6f",
+   "metadata": {},
+   "source": [
+    "## Fast follow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d32a2b35",
+   "metadata": {},
+   "source": [
+    "### RNA splicing\n",
+    "- RBFOX2 modulates a metastatic signature of alternative splicing in pancreatic cancer - Nature - 2023"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "edcb5d45",
    "metadata": {},
    "source": [
-    "## M60\n",
+    "### M60\n",
     "- Drug screening approach combines epigenetic sensitization with immunochemotherapy in cancer"
    ]
   },
@@ -23,7 +40,7 @@
    "id": "1eb3d9ae",
    "metadata": {},
    "source": [
-    "## Sox9 Gastro"
+    "### Sox9 Gastro"
    ]
   },
   {
@@ -31,7 +48,7 @@
    "id": "dee80de5",
    "metadata": {},
    "source": [
-    "## Sox9 Sci Adv"
+    "### Sox9 Sci Adv"
    ]
   },
   {
@@ -39,9 +56,17 @@
    "id": "d84490c9",
    "metadata": {},
    "source": [
-    "## Others\n",
+    "### Others\n",
     "- Collective regulation of chromatin modifications predicts replication timing during cell cycle"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4af2f38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
