--- a/docs/source/notebooks/theme-based/ToolDev.ipynb
+++ b/docs/source/notebooks/theme-based/ToolDev.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9349fc1",
+   "id": "6296d00a",
    "metadata": {},
    "source": [
     "### inferDEG时空预测\n",
@@ -119,9 +119,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "985e05fc",
+   "metadata": {},
+   "source": [
+    "### in silico gene perturbation\n",
+    "- Dissecting cell identity via network inference and in silico gene perturbation - Nature - 2023"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64a5db5b",
+   "id": "b0ebcb34",
    "metadata": {},
    "outputs": [],
    "source": []
