--- a/docs/source/notebooks/More.ipynb
+++ b/docs/source/notebooks/More.ipynb
@@ -95,7 +95,8 @@
    "id": "051cb73e",
    "metadata": {},
    "source": [
-    "## Others"
+    "## Others\n",
+    "- writing: 科研者之家的AI写作助手 - https://www.home-for-researchers.com/paper/index.html#/"
    ]
   },
   {
