--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -198,6 +198,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "215906ed",
+   "metadata": {},
+   "source": [
+    "## DB\n",
+    "- ENCODE Blacklist - https://github.com/Boyle-Lab/Blacklist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cdab6dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "b497cf3e",
    "metadata": {},
    "source": [
