--- a/docs/source/notebooks/theme-based/Scenario planning.ipynb
+++ b/docs/source/notebooks/theme-based/Scenario planning.ipynb
@@ -14,8 +14,25 @@
    "id": "d152fb6f",
    "metadata": {},
    "source": [
-    "## Fast follow"
+    "# Fast follow"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65adcf64",
+   "metadata": {},
+   "source": [
+    "## ChIP-seq & RNA-seq\n",
+    "- Dynamic Chromatin States Coupling with Key Transcription Factors in Colitis-Associated Colorectal Cancer - Adv Sci - 2022 - https://onlinelibrary.wiley.com/doi/full/10.1002/advs.202200536"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0967699d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
