--- a/docs/source/notebooks/theme-based/FastFollow.ipynb
+++ b/docs/source/notebooks/theme-based/FastFollow.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "91aa66d7",
-   "metadata": {},
-   "source": [
-    "# Scenario planning\n",
-    "- 沙盘推演，一篇paper摆在你面前，你能重复出来吗？能拓展到其他领域吗？"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "d152fb6f",
    "metadata": {},
    "source": [
     "# Fast follow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d38d0e2",
+   "metadata": {},
+   "source": [
+    "- Scenario planning\n",
+    "- 沙盘推演，一篇paper摆在你面前，你能重复出来吗？能拓展到其他领域吗？"
    ]
   },
   {
@@ -41,6 +41,14 @@
    "source": [
     "### RNA splicing\n",
     "- RBFOX2 modulates a metastatic signature of alternative splicing in pancreatic cancer - Nature - 2023"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "093e6832",
+   "metadata": {},
+   "source": [
+    "- Stepwise-edited, human melanoma models reveal mutations’ effect on tumor and microenvironment - 2022 - Science"
    ]
   },
   {
