--- a/docs/source/notebooks/theme-based/FastFollow.ipynb
+++ b/docs/source/notebooks/theme-based/FastFollow.ipynb
@@ -48,7 +48,9 @@
    "id": "093e6832",
    "metadata": {},
    "source": [
-    "- Stepwise-edited, human melanoma models reveal mutations’ effect on tumor and microenvironment - 2022 - Science"
+    "- Stepwise-edited, human melanoma models reveal mutations’ effect on tumor and microenvironment - 2022 - Science\n",
+    "- why Stepwise? 不就是多个mouse model吗，有什么亮点？\n",
+    "- "
    ]
   },
   {
