--- a/docs/source/notebooks/theme-based/FastFollow.ipynb
+++ b/docs/source/notebooks/theme-based/FastFollow.ipynb
@@ -88,6 +88,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b83f6214",
+   "metadata": {},
+   "source": [
+    "## Screening and function\n",
+    "- KAT6A and ENL Form an Epigenetic Transcriptional Control Module to Drive Critical Leukemogenic Gene-Expression Programs - https://doi.org/10.1158/2159-8290.CD-20-1459"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d4af2f38",
