--- a/docs/source/notebooks/Data Center.ipynb
+++ b/docs/source/notebooks/Data Center.ipynb
@@ -416,7 +416,10 @@
    "source": [
     "#### colorectal cancer subtypes and cell lines\n",
     "- Evaluation of colorectal cancer subtypes and cell lines using deep learning\n",
-    "- https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6892438/"
+    "- https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6892438/\n",
+    "- RKO is an APC wt, MSI, and homozygous KMT2C mutant CRC cell line\n",
+    "- Restoration of KMT2C/MLL3 in human colorectal cancer cells reinforces genome-wide H3K4me1 profiles and influences cell growth and gene expression\n",
+    "- https://clinicalepigeneticsjournal.biomedcentral.com/articles/10.1186/s13148-020-00863-z"
    ]
   },
   {
