--- a/docs/source/notebooks/Data Center.ipynb
+++ b/docs/source/notebooks/Data Center.ipynb
@@ -414,7 +414,7 @@
    "id": "5abf7c3f",
    "metadata": {},
    "source": [
-    "#### colorectal cancer subtypes and cell lines\n",
+    "#### Colorectal cancer subtypes and cell lines\n",
     "- Evaluation of colorectal cancer subtypes and cell lines using deep learning\n",
     "- https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6892438/\n",
     "- RKO is an APC wt, MSI, and homozygous KMT2C mutant CRC cell line\n",
@@ -437,6 +437,16 @@
     "### IMMUcan\n",
     "- [Meta-Analysis of Human Cancer Single-Cell RNA-Seq Datasets Using the IMMUcan Database](https://doi.org/10.1158/0008-5472.CAN-22-0074)\n",
     "- https://immucanscdb.vital-it.ch/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11a4c0d4",
+   "metadata": {},
+   "source": [
+    "## DEG DB\n",
+    "- Usually, human study will not give you raw data and count data\n",
+    "- only the DEG list is provided in the Supp files"
    ]
   },
   {
