--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -148,7 +148,8 @@
     "#### Footprint\n",
     "- http://localhost:17435/notebooks/projects/ApcKO_multiomics/4.exclude_WT2.ipynb\n",
     "- https://stuartlab.org/signac/articles/footprint.html\n",
-    "- TOBIAS - NC - https://github.com/loosolab/TOBIAS"
+    "- TOBIAS - NC - https://github.com/loosolab/TOBIAS\n",
+    "- HINT-ATAC - GB - https://genomebiology.biomedcentral.com/articles/10.1186/s13059-019-1642-2#Abs1"
    ]
   },
   {
