--- a/docs/source/notebooks/theme-based/Projects.ipynb
+++ b/docs/source/notebooks/theme-based/Projects.ipynb
@@ -5,7 +5,7 @@
    "id": "d152fb6f",
    "metadata": {},
    "source": [
-    "# Fast follow"
+    "# Projects"
    ]
   },
   {
@@ -16,6 +16,27 @@
     "- Scenario planning\n",
     "- 沙盘推演，一篇paper摆在你面前，你能重复出来吗？能拓展到其他领域吗？"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c3a5fdc",
+   "metadata": {},
+   "source": [
+    "## epigenetic transcriptional and differentiation\n",
+    "- [BLANCO LAB](https://blancolab.com/publications)\n",
+    "- PRC2.1- and PRC2.2-specific accessory proteins drive recruitment of different forms of canonical PRC1\n",
+    "- TGF-β signaling promotes cervical cancer metastasis via CDR1as\n",
+    "- Mutant NPM1 Directly Regulates Oncogenic Transcription in Acute Myeloid Leukemia\n",
+    "- The CDK inhibitor CR8 acts as a molecular glue degrader that depletes cyclin K"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48ee8f05",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
