--- a/docs/source/notebooks/theme-based/Projects.ipynb
+++ b/docs/source/notebooks/theme-based/Projects.ipynb
@@ -19,15 +19,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e8c8080c",
+   "metadata": {},
+   "source": [
+    "## M60\n",
+    "- Drug screening approach combines epigenetic sensitization with immunochemotherapy in cancer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0c3a5fdc",
    "metadata": {},
    "source": [
-    "## epigenetic transcriptional and differentiation\n",
+    "## epigenetic transcriptional and differentiation/plasiticity\n",
     "- [BLANCO LAB](https://blancolab.com/publications)\n",
     "- PRC2.1- and PRC2.2-specific accessory proteins drive recruitment of different forms of canonical PRC1\n",
     "- TGF-β signaling promotes cervical cancer metastasis via CDR1as\n",
     "- Mutant NPM1 Directly Regulates Oncogenic Transcription in Acute Myeloid Leukemia\n",
     "- The CDK inhibitor CR8 acts as a molecular glue degrader that depletes cyclin K"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e676f60d",
+   "metadata": {},
+   "source": [
+    "## integration of 1M gut - differentiation\n",
+    "- Benchmarking atlas-level data integration in single-cell genomics - NM"
    ]
   },
   {
@@ -76,15 +94,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edcb5d45",
-   "metadata": {},
-   "source": [
-    "### M60\n",
-    "- Drug screening approach combines epigenetic sensitization with immunochemotherapy in cancer"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "1eb3d9ae",
    "metadata": {},
    "source": [
@@ -118,20 +127,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4af2f38",
+   "cell_type": "markdown",
+   "id": "b14fb071",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 3D genome\n",
+    "- Structural elements promote architectural stripe formation and facilitate ultra-long-range gene regulation at a human disease locus - MC - 2023"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "456de54b",
+   "cell_type": "markdown",
+   "id": "523d3b48",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Human TF footprint DB\n",
+    "- saturation curve\n",
+    "- motif groups\n",
+    "- co-localization\n",
+    "- Atlas of Transcription Factor Binding Sites from ENCODE DNase Hypersensitivity Data across 27 Tissue Types - CR - 2020"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aad8648c",
+   "metadata": {},
+   "source": [
+    "## single-cell style peak/motif UMAP plot"
+   ]
   },
   {
    "cell_type": "code",
