--- a/docs/source/notebooks/theme-based/Projects.ipynb
+++ b/docs/source/notebooks/theme-based/Projects.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b14fb071",
+   "id": "085c4727",
    "metadata": {},
    "source": [
     "## 3D genome\n",
@@ -137,22 +137,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "523d3b48",
+   "id": "47001e09",
    "metadata": {},
    "source": [
     "## Human TF footprint DB\n",
     "- saturation curve\n",
     "- motif groups\n",
     "- co-localization\n",
-    "- Atlas of Transcription Factor Binding Sites from ENCODE DNase Hypersensitivity Data across 27 Tissue Types - CR - 2020"
+    "- Atlas of Transcription Factor Binding Sites from ENCODE DNase Hypersensitivity Data across 27 Tissue Types - CR - 2020\n",
+    "- footprintDB: a database of transcription factors with annotated cis elements and binding interfaces - Bioinfo - 2014"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "aad8648c",
+   "id": "92388830",
    "metadata": {},
    "source": [
-    "## single-cell style peak/motif UMAP plot"
+    "## single-cell style peak/motif UMAP plot\n",
+    "- peak motif UMAP\n",
+    "- Factorbook: an updated catalog of transcription factor motifs and candidate regulatory motif sites - NAR - 2022\n",
+    "- BindVAE: Dirichlet variational autoencoders for de novo motif discovery from accessible chromatin - GB - 2022"
    ]
   },
   {
