--- a/docs/source/notebooks/theme-based/Projects.ipynb
+++ b/docs/source/notebooks/theme-based/Projects.ipynb
@@ -33,6 +33,7 @@
    "source": [
     "## epigenetic transcriptional and differentiation/plasiticity\n",
     "- [BLANCO LAB](https://blancolab.com/publications)\n",
+    "- Pubmed - [site](https://pubmed.ncbi.nlm.nih.gov/?term=(blanco+MA%5Bauthor%5D+(children%27s%5Baffil%5D+OR+(molecular+princeton%5Baffil%5D)+or+leroy))+OR+Andres+Blanco+M%5BAuthor%5D+OR+(24813610%5BUID%5D+OR+26659182%5BUID%5D+OR+15754025%5BUID%5D+))\n",
     "- PRC2.1- and PRC2.2-specific accessory proteins drive recruitment of different forms of canonical PRC1\n",
     "- TGF-β signaling promotes cervical cancer metastasis via CDR1as\n",
     "- Mutant NPM1 Directly Regulates Oncogenic Transcription in Acute Myeloid Leukemia\n",
@@ -157,6 +158,15 @@
     "- peak motif UMAP\n",
     "- Factorbook: an updated catalog of transcription factor motifs and candidate regulatory motif sites - NAR - 2022\n",
     "- BindVAE: Dirichlet variational autoencoders for de novo motif discovery from accessible chromatin - GB - 2022"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80ace54d",
+   "metadata": {},
+   "source": [
+    "## CRC Atlas\n",
+    "- NCBI paper: https://pubmed.ncbi.nlm.nih.gov/?term=single+cell+AND+colorectal+cancer&filter=years.2017-2023"
    ]
   },
   {
