--- a/docs/source/notebooks/theme-based/Projects.ipynb
+++ b/docs/source/notebooks/theme-based/Projects.ipynb
@@ -34,6 +34,7 @@
     "## epigenetic transcriptional and differentiation/plasiticity\n",
     "- [BLANCO LAB](https://blancolab.com/publications)\n",
     "- Pubmed - [site](https://pubmed.ncbi.nlm.nih.gov/?term=(blanco+MA%5Bauthor%5D+(children%27s%5Baffil%5D+OR+(molecular+princeton%5Baffil%5D)+or+leroy))+OR+Andres+Blanco+M%5BAuthor%5D+OR+(24813610%5BUID%5D+OR+26659182%5BUID%5D+OR+15754025%5BUID%5D+))\n",
+    "- [Yang Shi lab](https://www.ludwig.ox.ac.uk/team/yang-shi)\n",
     "- PRC2.1- and PRC2.2-specific accessory proteins drive recruitment of different forms of canonical PRC1\n",
     "- TGF-β signaling promotes cervical cancer metastasis via CDR1as\n",
     "- Mutant NPM1 Directly Regulates Oncogenic Transcription in Acute Myeloid Leukemia\n",
@@ -124,6 +125,7 @@
    "metadata": {},
    "source": [
     "## Screening and function\n",
+    "- Re-programing Chromatin with a Bifunctional LSD1/HDAC Inhibitor Induces Therapeutic Differentiation in DIPG - https://doi.org/10.1016/j.ccell.2019.09.005\n",
     "- KAT6A and ENL Form an Epigenetic Transcriptional Control Module to Drive Critical Leukemogenic Gene-Expression Programs - https://doi.org/10.1158/2159-8290.CD-20-1459"
    ]
   },
