--- a/docs/source/notebooks/theme-based/Projects.ipynb
+++ b/docs/source/notebooks/theme-based/Projects.ipynb
@@ -172,9 +172,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7e6c07b6",
+   "metadata": {},
+   "source": [
+    "## Single cell cancer epigenetics\n",
+    "- https://www.sciencedirect.com/science/article/pii/S2405803322001339\n",
+    "- https://mp.weixin.qq.com/s/7NGunjUnjO4MndmdRK0tvw"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b49102ec",
+   "id": "4fb65d2f",
    "metadata": {},
    "outputs": [],
    "source": []
