--- a/docs/source/notebooks/theme-based/Projects.ipynb
+++ b/docs/source/notebooks/theme-based/Projects.ipynb
@@ -182,9 +182,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d9138e82",
+   "metadata": {},
+   "source": [
+    "## apoptotic\n",
+    "- The TRAIL apoptotic pathway in cancer onset, progression and therapy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "028b4754",
+   "metadata": {},
+   "source": [
+    "## AI\n",
+    "- [AI Tool Predicts Colon Cancer Survival, Treatment Response](https://hms.harvard.edu/news/ai-tool-predicts-colon-cancer-survival-treatment-response?utm_source=SilverpopMailing&utm_medium=email&utm_campaign=Daily%20Gazette%2020230414%20(1))\n",
+    "- https://github.com/hms-dbmi/MOMA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fb65d2f",
+   "id": "1fbb4eaf",
    "metadata": {},
    "outputs": [],
    "source": []
