--- a/docs/source/notebooks/theme-based/Projects.ipynb
+++ b/docs/source/notebooks/theme-based/Projects.ipynb
@@ -23,7 +23,8 @@
    "metadata": {},
    "source": [
     "## M60\n",
-    "- Drug screening approach combines epigenetic sensitization with immunochemotherapy in cancer"
+    "- Drug screening approach combines epigenetic sensitization with immunochemotherapy in cancer\n",
+    "- [Histone deacetylase function in CD4+ T cells - 2018 - Review](https://www.nature.com/articles/s41577-018-0037-z)"
    ]
   },
   {
