--- a/docs/source/notebooks/theme-based/ToolDev.ipynb
+++ b/docs/source/notebooks/theme-based/ToolDev.ipynb
@@ -258,6 +258,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "88b000a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a34c12c6",
+   "metadata": {},
+   "source": [
+    "## traditional epigenetic\n",
+    "- ATAC footprint get motif\n",
+    "- Identification of transcription factor binding sites using ATAC-seq - GB - 2019\n",
+    "- deep learning predict protein protein interaction\n",
+    "- Predicting protein–protein interactions through sequence-based deep learning - Bioinformatics - 2018\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d45815ee",
    "metadata": {},
    "outputs": [],
