--- a/docs/source/notebooks/theme-based/ToolDev.ipynb
+++ b/docs/source/notebooks/theme-based/ToolDev.ipynb
@@ -258,14 +258,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88b000a7",
+   "id": "c69ef59a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a34c12c6",
+   "id": "7b63944b",
    "metadata": {},
    "source": [
     "## traditional epigenetic\n",
@@ -273,7 +273,10 @@
     "- Identification of transcription factor binding sites using ATAC-seq - GB - 2019\n",
     "- deep learning predict protein protein interaction\n",
     "- Predicting protein–protein interactions through sequence-based deep learning - Bioinformatics - 2018\n",
-    "- "
+    "- Lisa: inferring transcriptional regulators through integrative modeling of public chromatin accessibility and ChIP-seq data - GB - 2020\n",
+    "- http://lisa.cistrome.org/\n",
+    "- TF colocalization\n",
+    "- https://www.frontiersin.org/articles/10.3389/fgene.2020.00072/full"
    ]
   },
   {
