--- a/docs/source/notebooks/theme-based/GutCellAtlas.ipynb
+++ b/docs/source/notebooks/theme-based/GutCellAtlas.ipynb
@@ -9,6 +9,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e9a4043e",
+   "metadata": {},
+   "source": [
+    "## Paper list\n",
+    "- 2022 - Nature - Phenotypic plasticity and genetic control in colorectal cancer evolution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0f49acda",
