--- a/docs/source/notebooks/theme-based/Projects.ipynb
+++ b/docs/source/notebooks/theme-based/Projects.ipynb
@@ -208,6 +208,37 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5aed826d",
+   "metadata": {},
+   "source": [
+    "## scPeak2Gene\n",
+    "- 目前还没有很好用的工具，单细胞多组学数据高度可信\n",
+    "- 这个功能非常重要，最好了引用量会非常大，可以一战成名\n",
+    "- 可以给出非常量化的线性关系，可以问出非常高质量的问题，突破3D genome的界限，直接用association链接\n",
+    "- 对一个特定的genome，peak是可以被穷尽的，应该有自己的gtf文件\n",
+    "- 能否找到一个特定的CRC distal enhancer能驱动关键stem或diff gene的表达，比如SOX9或KRT20，实验验证一下\n",
+    "- 学习一下MIRA，这应该是nature method和genome biology水平的文章\n",
+    "- tissue specific scPeak2Gene"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d187c26f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b04b7a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
