--- a/docs/source/notebooks/theme-based/Projects.ipynb
+++ b/docs/source/notebooks/theme-based/Projects.ipynb
@@ -225,12 +225,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d187c26f",
+   "cell_type": "markdown",
+   "id": "9e05a07e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## co-expressed module\n",
+    "- 单细胞发现的大量的这种modules到底意味着什么？\n",
+    "- 是否存在一组调控因子来驱动这些co-expression module的表达？\n",
+    "- 转录表达模块是最下游的效应，是所有上游信号调控的汇聚"
+   ]
   },
   {
    "cell_type": "code",
