--- a/docs/source/notebooks/theme-based/Projects.ipynb
+++ b/docs/source/notebooks/theme-based/Projects.ipynb
@@ -232,7 +232,37 @@
     "## co-expressed module\n",
     "- 单细胞发现的大量的这种modules到底意味着什么？\n",
     "- 是否存在一组调控因子来驱动这些co-expression module的表达？\n",
-    "- 转录表达模块是最下游的效应，是所有上游信号调控的汇聚"
+    "- 转录表达模块是最下游的效应，是所有上游信号调控的汇聚\n",
+    "- single cell co expressed module\n",
+    "- Single-cell co-expression analysis reveals that transcriptional modules are shared across cell types in the brain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f4dbb7a",
+   "metadata": {},
+   "source": [
+    "## NGS机制\n",
+    "- Complex-dependent histone acetyltransferase activity of KAT8 determines its role in transcription and cellular homeostasis - https://www.sciencedirect.com/science/article/pii/S1097276521000988\n",
+    "- Dynamic Competing Histone H4 K5K8 Acetylation and Butyrylation Are Hallmarks of Highly Active Gene Promoters\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52f81be1",
+   "metadata": {},
+   "source": [
+    "## Gene Therapy cancer\n",
+    "- Gene Therapies for Cancer: Strategies, Challenges and Successes\n",
+    "- Strategies for Targeting Gene Therapy in Cancer Cells With Tumor-Specific Promoters\n",
+    "- The Current Status of Gene Therapy for the Treatment of Cancer\n",
+    "- CRISPR-Cas12a: Functional overview and applications\n",
+    "- https://portals.broadinstitute.org/gppx/crispick/public\n",
+    "- CRISPR-Based Therapeutic Genome Editing: Strategies and In Vivo Delivery by AAV Vectors\n",
+    "- Self-inactivating, all-in-one AAV vectors for precision Cas9 genome editing via homology-directed repair in vivo\n",
+    "- AAV-CRISPR Gene Editing Is Negated by Pre-existing Immunity to Cas9\n",
+    "- Viral Vectors for the in Vivo Delivery of CRISPR Components: Advances and Challenges"
    ]
   },
   {
