--- a/docs/source/notebooks/ModelExp.ipynb
+++ b/docs/source/notebooks/ModelExp.ipynb
@@ -48,7 +48,19 @@
     "- https://www.jax.org/strain/008875\n",
     "- Identification of stem cells in small intestine and colon by marker gene Lgr5 - Nature - 2007\n",
     "- 300 dollars per mice\n",
-    "- Figure 1C - [Aberrant cell state plasticity mediated by developmental reprogramming precedes colorectal cancer initiation](https://www.biorxiv.org/content/10.1101/2022.09.22.509032v2)"
+    "- Figure 1C - [Aberrant cell state plasticity mediated by developmental reprogramming precedes colorectal cancer initiation](https://www.biorxiv.org/content/10.1101/2022.09.22.509032v2)\n",
+    "- enhanced green fluorescent protein sequence (EGFP) \n",
+    "- https://www.uniprot.org/uniprotkb/C5MKY7/entry"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7e91f39",
+   "metadata": {},
+   "source": [
+    "#### Cdx2 colon model\n",
+    "- Cdx2-td and Cdx2-ApcKO\n",
+    "- tdTomato fluorescent protein sequence"
    ]
   },
   {
